  * The sections about implementing binary operators received an overhaul.

  * The section `Adding binary operators to classes' was rewritten

  * Added descriptions of operator new[](size) and operator delete[](pointer)

  * Added preview intro/cpp17.yo on the next C++17 standard

  * Added a section about selection statements with initializers to the
    `First Impression Of C++' chapter.

  * Added a section about folding expressions to the Class Templates chapter.

  * Typos fixed.

C++-annotations (10.6.0)

  * Added new section (Lvalues, rvalues and more, first/lvalues.yo) about
    various kinds of l/rvalues distinguished by C++.

  * Added new section (Standard Exceptions: to use or not to use?,
    exceptions/usestandard.yo) about the distinction between standard and
    non-standard exceptions.

  * Section 'Allocating arrays' (in chapter 'Classes and Memory Allocation')
    now describes how to initialize memory using the 'new Type[size]()'
    syntax. 

  * Section 'explicit conversion operators' (in chapter 'More Operator
    Overloading) received an overhaul.

  * Changed uses of shared_ptr objects to unique_ptr objects in
    stl/uniqueptr.yo. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 30 Oct 2016 10:25:03 +0100

C++-annotations (10.5.1)

  * Fixed various typos and completed several cosmetic modifications

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 24 Jul 2016 07:41:38 +0200

C++-annotations (10.5.0)

  * Rewrote the section about converting time to text, covering
    std::localtime, std::gmtime, std::put_time as well as the full table of
    put_time's format specifiers.

  * Removed the sections at the beginning of each chapter encouraging readers
    to send in suggestions for improvements. Instead, this encouragement is
    now shown at the end of the Annotation's `abstract'.
  
  * Updated the kindle-book conversion script, so that cplusplus.css is not
    used with the kindle book construction.

  * Several typos were fixed.
