@@ -25,7 +25,6 @@ Template argument deduction for class templates     P0091R3
 Declaring non-type template parameters with auto    P0127R2
 Using attribute namespaces without repetition   P0028R4
 Ignoring unsupported non-standard attributes    P0283R2
-Remove Deprecated operator++(bool)  P0002R1
 Make exception specifications be part of the type system    P0012R1
 Rewording inheriting constructors (core issue 1941 et al)   P0136R1
 Inline variables    P0386R2
