@@ -31,6 +31,9 @@ includefile(generic/intro)
     lsubsect(EQUALRANGE)(equal_range)
     includefile(generic/equalrange)
 
+    lsubsect(EXCHANGE)(exchange)
+    includefile(generic/exchange)
+
     lsubsect(FILL)(fill)
     includefile(generic/fill)
 
