@@ -1,0 +1,15 @@
+hi(exchange)
+itemization(
+    it() Header file: tt(<utility>)
+    it() Function prototype:
+    itemization(
+        itt(Type exchange(Type &object1, ValueType &&newValue);)
+    )
+    it() Description:
+    itemization(
+        it() tt(newValue) is assigned to tt(object1), and tt(object1's)
+                previous value is returned.
+    )
+    it() Example:
+    verbinclude(-a examples/exchange.cc)
+)
