@@ -108,3 +108,8 @@ prefix operator. Example:
     uns.operator++();     // prefix-incrementing uns
     uns.operator++(0);    // postfix-incrementing uns
         )
+
+Both the prefix and postfix increment and decrement operators are deprecated
+when applied to tt(bool) type of variables. In situations where a postfix
+increment operator could be useful the tt(std::exchange) (cf. section
+ref(EXCHANGE)) should be used.
