@@ -9,6 +9,11 @@
   * Added a section about selection statements with initializers to the
     `First Impression Of C++' chapter.
 
+  * Added a paragraph about increment/decrement operators being deprecated for
+    bool type of variables to overloading/increment.yo.
+
+  * Added a section about std::exchange to the Generic Algorithms chapter.
+
   * Added a section about folding expressions to the Class Templates chapter.
 
   * Typos fixed.
